--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -6,23 +6,24 @@
   "dependencies": {
     "@ethang/schemas": "workspace:*",
     "@ethang/toolbelt": "^4.4.11",
-    "@hono/zod-validator": "^0.7.4",
-    "@prisma/adapter-d1": "^6.19.0",
-    "@prisma/client": "6.19.0",
+    "@hono/zod-validator": "^0.7.5",
+    "@prisma/adapter-d1": "^7.0.0",
+    "@prisma/client": "7.0.0",
     "bcryptjs": "^3.0.3",
     "hono": "^4.10.6",
     "jose": "^6.1.2",
     "lodash": "^4.17.21",
-    "prisma": "^6.19.0"
+    "prisma": "^7.0.0"
   },
   "devDependencies": {
-    "@ethang/eslint-config": "^23.1.0",
+    "@dotenvx/dotenvx": "^1.51.1",
+    "@ethang/eslint-config": "^23.2.0",
     "@types/lodash": "^4.17.20",
     "browserslist-config-baseline": "^0.5.0",
     "eslint": "^9.39.1",
-    "rimraf": "^6.1.0",
-    "typescript-eslint": "^8.46.4",
-    "wrangler": "^4.47.0"
+    "rimraf": "^6.1.2",
+    "typescript-eslint": "^8.47.0",
+    "wrangler": "^4.49.0"
   },
   "engines": {
     "node": ">=24"
