--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -15,12 +15,12 @@
     "@heroui/react": "2.8.5",
     "@heroui/theme": "2.4.23",
     "@internationalized/date": "^3.10.0",
-    "@prisma/adapter-d1": "^6.19.0",
-    "@prisma/client": "^6.19.0",
+    "@prisma/adapter-d1": "^7.0.0",
+    "@prisma/client": "^7.0.0",
     "@tanstack/query-async-storage-persister": "^5.90.12",
     "@tanstack/react-form": "^1.25.0",
-    "@tanstack/react-router": "^1.136.8",
-    "@tanstack/react-router-devtools": "^1.136.8",
+    "@tanstack/react-router": "^1.136.14",
+    "@tanstack/react-router-devtools": "^1.136.14",
     "@uidotdev/usehooks": "^2.4.1",
     "framer-motion": "^12.23.24",
     "graphql": "^16.12.0",
@@ -30,7 +30,7 @@
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.553.0",
+    "lucide-react": "^0.554.0",
     "luxon": "^3.7.2",
     "ms": "^2.1.3",
     "react": "^19.2.0",
@@ -44,21 +44,22 @@
     "zod-prisma-types": "^3.3.5"
   },
   "devDependencies": {
-    "@cloudflare/vite-plugin": "^1.14.2",
+    "@cloudflare/vite-plugin": "^1.15.0",
+    "@dotenvx/dotenvx": "^1.51.1",
     "@eslint/js": "^9.39.1",
-    "@ethang/eslint-config": "^23.1.0",
+    "@ethang/eslint-config": "^23.2.0",
     "@tailwindcss/postcss": "^4.1.17",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/eslint-plugin-query": "^5.91.2",
-    "@tanstack/router-plugin": "^1.136.8",
+    "@tanstack/router-plugin": "^1.136.14",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.20",
     "@types/luxon": "^3.7.1",
     "@types/ms": "^2.1.0",
     "@types/node": "^24.10.1",
-    "@types/react": "^19.2.5",
+    "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
     "@types/use-sync-external-store": "^1.5.0",
     "@vitejs/plugin-react": "^5.1.1",
@@ -66,15 +67,15 @@
     "dotenv": "^17.2.3",
     "eslint": "^9.39.1",
     "jiti": "^2.6.1",
-    "prisma": "^6.19.0",
-    "rimraf": "^6.1.0",
+    "prisma": "^7.0.0",
+    "rimraf": "^6.1.2",
     "tailwindcss": "^4.1.17",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.4",
+    "typescript-eslint": "^8.47.0",
     "vite": "^7.2.2",
     "vite-plugin-pwa": "^1.1.0",
-    "vitest": "^4.0.9",
-    "wrangler": "^4.47.0"
+    "vitest": "^4.0.10",
+    "wrangler": "^4.49.0"
   },
   "engines": {
     "node": ">=24"
