--- a/apps/ethang/package.json
+++ b/apps/ethang/package.json
@@ -10,17 +10,17 @@
     "@ethang/toolbelt": "^4.4.11",
     "@heroui/react": "2.8.5",
     "@heroui/theme": "2.4.23",
-    "@prisma/adapter-d1": "^6.19.0",
-    "@prisma/client": "^6.19.0",
+    "@prisma/adapter-d1": "^7.0.0",
+    "@prisma/client": "^7.0.0",
     "@tanstack/query-async-storage-persister": "^5.90.12",
     "@tanstack/react-query": "^5.90.10",
     "@tanstack/react-query-persist-client": "^5.90.12",
-    "@tanstack/react-router": "^1.136.8",
-    "@tanstack/react-router-devtools": "^1.136.8",
+    "@tanstack/react-router": "^1.136.14",
+    "@tanstack/react-router-devtools": "^1.136.14",
     "framer-motion": "^12.23.24",
     "idb-keyval": "^6.2.2",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.553.0",
+    "lucide-react": "^0.554.0",
     "luxon": "^3.7.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -31,28 +31,29 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@cloudflare/vite-plugin": "^1.14.2",
-    "@ethang/eslint-config": "^23.1.0",
+    "@cloudflare/vite-plugin": "^1.15.0",
+    "@dotenvx/dotenvx": "^1.51.1",
+    "@ethang/eslint-config": "^23.2.0",
     "@tailwindcss/postcss": "^4.1.17",
     "@tailwindcss/vite": "^4.1.17",
-    "@tanstack/router-plugin": "^1.136.8",
+    "@tanstack/router-plugin": "^1.136.14",
     "@types/lodash": "^4.17.20",
     "@types/luxon": "^3.7.1",
-    "@types/react": "^19.2.5",
+    "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^5.1.1",
     "browserslist-config-baseline": "^0.5.0",
     "eslint": "^9.39.1",
     "globals": "^16.5.0",
-    "prisma": "^6.19.0",
-    "rimraf": "^6.1.0",
+    "prisma": "^7.0.0",
+    "rimraf": "^6.1.2",
     "tailwindcss": "^4.1.17",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.4",
+    "typescript-eslint": "^8.47.0",
     "vite": "^7.2.2",
     "vite-plugin-pwa": "^1.1.0",
-    "wrangler": "^4.47.0"
+    "wrangler": "^4.49.0"
   },
   "engines": {
     "node": ">=24"
