--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -11,19 +11,23 @@
     "@prisma/adapter-d1": "^7.0.1",
     "@prisma/client": "^7.0.1",
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-query": "^5.90.11",
     "@tanstack/react-router": "^1.139.7",
     "@tanstack/react-router-devtools": "^1.139.7",
     "fast-xml-parser": "^5.3.2",
     "framer-motion": "^12.23.24",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.555.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-lite-youtube-embed": "^3.3.2",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.15.3",
     "@ethang/eslint-config": "^23.3.1",
     "@react-types/shared": "^3.32.1",
+    "@tanstack/eslint-plugin-query": "^5.91.2",
     "@tanstack/router-plugin": "^1.139.7",
     "@types/lodash": "^4.17.21",
     "@types/node": "^24.10.1",
