--- a/apps/dashboard/wrangler.jsonc
+++ b/apps/dashboard/wrangler.jsonc
@@ -8,8 +8,7 @@
     {
       "binding": "dashboard",
       "database_id": "acb35e23-2bcf-4ec4-87b6-2791626826b3",
-      "database_name": "dashboard",
-      "remote": true
+      "database_name": "dashboard"
     }
   ],
   "main": "worker/index.ts",
