--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "author": "Ethan Glover",
   "devDependencies": {
-    "@ethang/eslint-config": "^23.3.4",
+    "@ethang/eslint-config": "^23.3.5",
     "@types/node": "^24.10.1",
     "eslint": "^9.39.1",
-    "typescript-eslint": "^8.48.0"
+    "typescript-eslint": "^8.48.1"
   },
   "license": "ISC",
   "name": "ethang-monorepo",
@@ -27,7 +27,7 @@
       "workerd"
     ],
     "overrides": {
-      "rollup": ">4.45.0"
+      "sanity": "<=4.19"
     }
   },
   "scripts": {
