--- a/apps/ethang/package.json
+++ b/apps/ethang/package.json
@@ -31,9 +31,14 @@
     "zod": "^4.3.4"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.3",
     "@cloudflare/vite-plugin": "^1.19.0",
     "@dotenvx/dotenvx": "^1.51.4",
-    "@ethang/eslint-config": "^24.2.5",
+    "@ethang/eslint-config": "^24.2.7",
+    "@storybook/addon-a11y": "^10.1.11",
+    "@storybook/addon-docs": "^10.1.11",
+    "@storybook/addon-vitest": "^10.1.11",
+    "@storybook/react-vite": "^10.1.11",
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/router-plugin": "^1.145.2",
@@ -43,16 +48,22 @@
     "@types/react-dom": "^19.2.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^5.1.2",
+    "@vitest/browser-playwright": "^4.0.16",
+    "@vitest/coverage-v8": "^4.0.16",
     "browserslist-config-baseline": "^0.5.0",
     "eslint": "^9.39.2",
+    "eslint-plugin-storybook": "^10.1.11",
     "globals": "^17.0.0",
+    "playwright": "^1.57.0",
     "prisma": "^7.2.0",
     "rimraf": "^6.1.2",
+    "storybook": "^10.1.11",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.51.0",
     "vite": "^7.3.0",
     "vite-plugin-pwa": "^1.2.0",
+    "vitest": "^4.0.16",
     "wrangler": "^4.56.0"
   },
   "engines": {
@@ -62,12 +73,15 @@
   "private": true,
   "scripts": {
     "build": "rimraf dist && tsc -b && vite build",
+    "build-storybook": "storybook build",
     "cf-typegen": "wrangler types",
     "deploy": "pnpm run build && wrangler deploy",
     "dev": "vite",
     "lint": "eslint . --fix --concurrency=auto",
     "preview": "pnpm run build && vite preview",
-    "prisma-gen": "rimraf generated/prisma && prisma generate"
+    "prisma-gen": "rimraf generated/prisma && prisma generate",
+    "storybook": "storybook dev -p 6006",
+    "test": "vitest --project=storybook --watch=false"
   },
   "type": "module",
   "version": "0.0.0"
