--- a/apps/ethang/tsconfig.json
+++ b/apps/ethang/tsconfig.json
@@ -1,10 +1,20 @@
 {
 	"compilerOptions": {
 		"types": [
+			"node",
+			"vite/client",
 			"./worker-configuration.d.ts"
 		]
 	},
 	"extends": [
 		"../../packages/tsconfig/tsconfig.react.json"
 	],
+	"include": [
+		"**/*.ts",
+		"**/*.tsx",
+		".storybook/*.ts",
+		".storybook/*.tsx",
+		"*.config.js",
+		"*.config.ts"
+	]
 }
