--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "devDependencies": {
     "@ethang/eslint-config": "^24.2.7",
     "@types/node": "^25.0.3",
+    "bun": "^1.3.5",
     "eslint": "^9.39.2",
     "typescript-eslint": "^8.51.0"
   },
@@ -20,6 +21,7 @@
       "@tailwindcss/oxide",
       "bcrypt",
       "better-sqlite3",
+      "bun",
       "cldr-data",
       "esbuild",
       "msw",
