--- a/apps/ethang/package.json
+++ b/apps/ethang/package.json
@@ -5,6 +5,9 @@
   ],
   "dependencies": {
     "@anatine/zod-mock": "^3.14.0",
+    "@apollo/client": "^4.0.11",
+    "@apollo/server": "^5.2.0",
+    "@as-integrations/cloudflare-workers": "^1.1.1",
     "@ethang/schemas": "workspace:*",
     "@ethang/store": "^2.3.2",
     "@ethang/toolbelt": "^4.4.11",
@@ -15,9 +18,10 @@
     "@tanstack/query-async-storage-persister": "^5.90.18",
     "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-query-persist-client": "^5.90.18",
-    "@tanstack/react-router": "^1.144.0",
-    "@tanstack/react-router-devtools": "^1.144.0",
-    "framer-motion": "^12.23.26",
+    "@tanstack/react-router": "^1.145.7",
+    "@tanstack/react-router-devtools": "^1.145.7",
+    "framer-motion": "^12.24.7",
+    "graphql": "^16.12.0",
     "idb-keyval": "^6.2.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.562.0",
@@ -26,15 +30,17 @@
     "react-dom": "^19.2.3",
     "react-lite-youtube-embed": "^3.3.3",
     "react-syntax-highlighter": "^16.1.0",
+    "rxjs": "^7.8.2",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0",
-    "zod": "^4.3.4"
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.3",
     "@cloudflare/vite-plugin": "^1.19.0",
+    "@cloudflare/workers-types": "^4.20260103.0",
     "@dotenvx/dotenvx": "^1.51.4",
-    "@ethang/eslint-config": "^24.2.7",
+    "@ethang/eslint-config": "^24.2.8",
     "@storybook/addon-a11y": "^10.1.11",
     "@storybook/addon-docs": "^10.1.11",
     "@storybook/addon-vitest": "^10.1.11",
@@ -42,7 +48,7 @@
     "@storybook/test": "^8.6.15",
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/vite": "^4.1.18",
-    "@tanstack/router-plugin": "^1.145.2",
+    "@tanstack/router-plugin": "^1.145.7",
     "@types/lodash": "^4.17.21",
     "@types/luxon": "^3.7.1",
     "@types/react": "^19.2.7",
@@ -61,7 +67,7 @@
     "storybook": "^10.1.11",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.51.0",
+    "typescript-eslint": "^8.52.0",
     "vite": "^7.3.0",
     "vite-plugin-pwa": "^1.2.0",
     "vitest": "^4.0.16",
