--- a/apps/ethang/wrangler.jsonc
+++ b/apps/ethang/wrangler.jsonc
@@ -4,14 +4,16 @@
     "binding": "ASSETS",
     "directory": "./public",
     "not_found_handling": "single-page-application",
-    "run_worker_first": ["/api/*", "/blog/*"]
+    "run_worker_first": ["/api/*", "/blog/*", "/graphql"]
   },
+  "compatibility_flags": ["nodejs_compat"],
   "compatibility_date": "2026-01-03",
   "d1_databases": [
     {
       "binding": "DB",
       "database_id": "c1423f5b-3a72-44f5-9cb4-d14b6f48f111",
-      "database_name": "ethang"
+      "database_name": "ethang",
+      "remote": true
     }
   ],
   "main": "worker/index.ts",
