--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -8,8 +8,8 @@
     "@angular-eslint/eslint-plugin": "^21.1.0",
     "@angular-eslint/eslint-plugin-template": "^21.1.0",
     "@angular-eslint/template-parser": "^21.1.0",
-    "@cspell/eslint-plugin": "^9.4.0",
-    "@eslint-react/eslint-plugin": "^2.5.5",
+    "@cspell/eslint-plugin": "^9.6.0",
+    "@eslint-react/eslint-plugin": "^2.6.2",
     "@eslint/css": "0.14.1",
     "@eslint/js": "^9.39.2",
     "@eslint/json": "^0.14.0",
@@ -17,7 +17,7 @@
     "@html-eslint/eslint-plugin": "^0.52.1",
     "@tanstack/eslint-plugin-query": "^5.91.2",
     "@tanstack/eslint-plugin-router": "^1.141.0",
-    "@typescript-eslint/parser": "^8.52.0",
+    "@typescript-eslint/parser": "^8.53.0",
     "angular-eslint": "21.1.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
@@ -26,7 +26,7 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-lodash": "^8.0.0",
     "eslint-plugin-perfectionist": "^5.3.1",
-    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-prettier": "^5.5.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-solid": "^0.14.5",
     "eslint-plugin-sonarjs": "3.0.5",
@@ -34,7 +34,7 @@
     "eslint-plugin-tailwindcss": "^4.0.0-beta.0",
     "eslint-plugin-unicorn": "^62.0.0",
     "prettier": "^3.7.4",
-    "typescript-eslint": "^8.52.0"
+    "typescript-eslint": "^8.53.0"
   },
   "devDependencies": {
     "@ethang/markdown-generator": "^1.1.5",
@@ -42,7 +42,8 @@
     "@types/eslint-plugin-jsx-a11y": "^6.10.1",
     "@types/eslint-plugin-tailwindcss": "^3.17.0",
     "@types/lodash": "^4.17.23",
-    "@types/node": "^25.0.6",
+    "@types/node": "^25.0.8",
+    "baseline-browser-mapping": "^2.9.14",
     "browserslist-config-baseline": "^0.5.0",
     "lodash": "^4.17.21",
     "tailwindcss": "^4.1.18",
@@ -63,5 +64,5 @@
     "lint": "eslint . --fix --concurrency=auto && prettier src --write"
   },
   "type": "module",
-  "version": "24.2.10"
+  "version": "24.3.0"
 }
