--- a/apps/ethang/package.json
+++ b/apps/ethang/package.json
@@ -17,13 +17,13 @@
     "@paljs/plugins": "^8.2.1",
     "@prisma/adapter-d1": "^7.3.0",
     "@prisma/client": "^7.3.0",
-    "@tanstack/react-router": "^1.154.2",
-    "@tanstack/react-router-devtools": "^1.154.2",
-    "framer-motion": "^12.28.1",
+    "@tanstack/react-router": "^1.157.14",
+    "@tanstack/react-router-devtools": "^1.157.14",
+    "framer-motion": "^12.29.0",
     "graphql": "^16.12.0",
     "idb-keyval": "^6.2.2",
     "lodash": "^4.17.23",
-    "lucide-react": "^0.562.0",
+    "lucide-react": "^0.563.0",
     "luxon": "^3.7.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -32,14 +32,14 @@
     "rxjs": "^7.8.2",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0",
-    "zod": "^4.3.5"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^5.0.0",
-    "@cloudflare/vite-plugin": "^1.21.1",
-    "@cloudflare/workers-types": "^4.20260120.0",
-    "@dotenvx/dotenvx": "^1.51.4",
-    "@ethang/eslint-config": "^24.4.2",
+    "@cloudflare/vite-plugin": "^1.21.2",
+    "@cloudflare/workers-types": "^4.20260124.0",
+    "@dotenvx/dotenvx": "^1.52.0",
+    "@ethang/eslint-config": "^24.5.0",
     "@storybook/addon-a11y": "^10.2.0",
     "@storybook/addon-docs": "^10.2.0",
     "@storybook/addon-vitest": "^10.2.0",
@@ -47,20 +47,20 @@
     "@storybook/test": "^8.6.15",
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/vite": "^4.1.18",
-    "@tanstack/router-plugin": "^1.154.2",
+    "@tanstack/router-plugin": "^1.157.14",
     "@types/lodash": "^4.17.23",
     "@types/luxon": "^3.7.1",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^5.1.2",
-    "@vitest/browser-playwright": "^4.0.17",
-    "@vitest/coverage-v8": "^4.0.17",
+    "@vitest/browser-playwright": "^4.0.18",
+    "@vitest/coverage-v8": "^4.0.18",
     "browserslist-config-baseline": "^0.5.0",
     "eslint": "^9.39.2",
     "eslint-plugin-storybook": "^10.2.0",
-    "globals": "^17.0.0",
-    "playwright": "^1.57.0",
+    "globals": "^17.1.0",
+    "playwright": "^1.58.0",
     "prisma": "^7.3.0",
     "rimraf": "^6.1.2",
     "storybook": "^10.2.0",
@@ -69,8 +69,8 @@
     "typescript-eslint": "^8.53.1",
     "vite": "^7.3.1",
     "vite-plugin-pwa": "^1.2.0",
-    "vitest": "^4.0.17",
-    "wrangler": "^4.59.3"
+    "vitest": "^4.0.18",
+    "wrangler": "^4.60.0"
   },
   "engines": {
     "node": ">=24"
@@ -87,7 +87,7 @@
     "preview": "pnpm run build && vite preview",
     "prisma-gen": "rimraf generated/prisma && prisma generate",
     "storybook": "storybook dev -p 6006",
-    "test": "vitest --watch=false"
+    "test": "pnpx playwright install && vitest --watch=false"
   },
   "type": "module",
   "version": "0.0.0"
