--- a/apps/ethang/package.json
+++ b/apps/ethang/package.json
@@ -21,6 +21,8 @@
     "@tanstack/react-query": "^5.90.20",
     "@tanstack/react-router": "^1.157.15",
     "@tanstack/react-router-devtools": "^1.157.15",
+    "dexie": "^4.2.1",
+    "dexie-react-hooks": "^4.2.0",
     "framer-motion": "^12.29.2",
     "graphql": "^16.12.0",
     "idb-keyval": "^6.2.2",
