--- a/apps/ethang/wrangler.jsonc
+++ b/apps/ethang/wrangler.jsonc
@@ -1,10 +1,13 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
+  "ai": {
+    "binding": "AI"
+  },
   "assets": {
     "binding": "ASSETS",
     "directory": "./public",
     "not_found_handling": "single-page-application",
-    "run_worker_first": ["/graphql"]
+    "run_worker_first": ["/api/*"]
   },
   "compatibility_flags": ["nodejs_compat"],
   "compatibility_date": "2026-01-26",
