--- a/apps/ethang-admin/package.json
+++ b/apps/ethang-admin/package.json
@@ -4,17 +4,17 @@
     "current node"
   ],
   "dependencies": {
-    "@sanity/orderable-document-list": "^1.4.2",
-    "@sanity/vision": "^5.6.0",
-    "react": "^19.1",
-    "react-dom": "^19.1",
-    "sanity": "^5.6.0",
+    "@sanity/orderable-document-list": "^1.5.0",
+    "@sanity/vision": "^5.7.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "sanity": "^5.7.0",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
-    "@ethang/eslint-config": "^24.5.0",
+    "@ethang/eslint-config": "^24.6.1",
     "@sanity/eslint-config-studio": "^6.0.0",
-    "@types/react": "^19.1",
+    "@types/react": "^19.2.10",
     "browserslist-config-baseline": "^0.5.0",
     "eslint": "^9.39.2",
     "prettier": "^3.5",
@@ -38,5 +38,6 @@
     "lint": "eslint . --fix --concurrency=auto",
     "start": "sanity start"
   },
+  "type": "module",
   "version": "1.0.0"
 }
