--- a/apps/ethang-admin/tsconfig.json
+++ b/apps/ethang-admin/tsconfig.json
@@ -1,10 +1,5 @@
 {
+  "exclude": ["node_modules"],
   "extends": "../../packages/tsconfig/tsconfig.base.json",
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "**/*.ts",
-    "**/*.tsx"
-  ]
+  "include": ["**/*.ts", "**/*.tsx"],
 }
