--- a/apps/ethang/package.json
+++ b/apps/ethang/package.json
@@ -5,68 +5,53 @@
   ],
   "dependencies": {
     "@anatine/zod-mock": "^3.14.0",
-    "@apollo/client": "^4.1.2",
-    "@apollo/server": "^5.3.0",
-    "@apollo/server-plugin-response-cache": "^5.0.0",
-    "@as-integrations/cloudflare-workers": "^1.1.1",
     "@ethang/schemas": "workspace:*",
     "@ethang/store": "^2.3.2",
     "@ethang/toolbelt": "^4.4.11",
     "@heroui/react": "2.8.7",
     "@heroui/theme": "2.4.25",
-    "@paljs/plugins": "^8.2.1",
-    "@prisma/adapter-d1": "^7.3.0",
-    "@prisma/client": "^7.3.0",
     "@sanity/client": "^7.14.1",
     "@tanstack/react-query": "^5.90.20",
-    "@tanstack/react-router": "^1.157.15",
-    "@tanstack/react-router-devtools": "^1.157.15",
+    "@tanstack/react-router": "^1.157.16",
+    "@tanstack/react-router-devtools": "^1.157.16",
     "dexie": "^4.2.1",
     "dexie-react-hooks": "^4.2.0",
     "framer-motion": "^12.29.2",
-    "graphql": "^16.12.0",
-    "idb-keyval": "^6.2.2",
     "lodash": "^4.17.23",
     "lucide-react": "^0.563.0",
     "luxon": "^3.7.2",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-lite-youtube-embed": "^3.3.3",
     "react-syntax-highlighter": "^16.1.0",
-    "rxjs": "^7.8.2",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@cloudflare/vite-plugin": "^1.21.2",
-    "@cloudflare/workers-types": "^4.20260124.0",
+    "@cloudflare/vite-plugin": "^1.22.0",
+    "@cloudflare/workers-types": "^4.20260127.0",
     "@dotenvx/dotenvx": "^1.52.0",
-    "@ethang/eslint-config": "^24.5.0",
+    "@ethang/eslint-config": "^24.6.1",
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/vite": "^4.1.18",
-    "@tanstack/router-plugin": "^1.157.15",
+    "@tanstack/router-plugin": "^1.157.16",
     "@types/lodash": "^4.17.23",
     "@types/luxon": "^3.7.1",
-    "@types/react": "^19.2.9",
+    "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^5.1.2",
-    "@vitest/browser-playwright": "^4.0.18",
-    "@vitest/coverage-v8": "^4.0.18",
     "browserslist-config-baseline": "^0.5.0",
     "eslint": "^9.39.2",
     "globals": "^17.1.0",
-    "playwright": "^1.58.0",
-    "prisma": "^7.3.0",
     "rimraf": "^6.1.2",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.53.1",
+    "typescript-eslint": "^8.54.0",
     "vite": "^7.3.1",
     "vite-plugin-pwa": "^1.2.0",
-    "vitest": "^4.0.18",
-    "wrangler": "^4.60.0"
+    "wrangler": "^4.61.0"
   },
   "engines": {
     "node": ">=24"
@@ -79,9 +64,7 @@
     "deploy": "pnpm run build && wrangler deploy",
     "dev": "vite",
     "lint": "eslint . --fix --concurrency=auto",
-    "preview": "pnpm run build && vite preview",
-    "prisma-gen": "rimraf generated/prisma && prisma generate",
-    "test": "pnpx playwright install && vitest --watch=false"
+    "preview": "pnpm run build && vite preview"
   },
   "type": "module",
   "version": "0.0.0"
