--- a/apps/ethang/package.json
+++ b/apps/ethang/package.json
@@ -10,6 +10,7 @@
     "@ethang/toolbelt": "^4.4.11",
     "@heroui/react": "2.8.7",
     "@heroui/theme": "2.4.25",
+    "@portabletext/react": "^6.0.2",
     "@sanity/client": "^7.14.1",
     "@tanstack/react-query": "^5.90.20",
     "@tanstack/react-router": "^1.157.16",
@@ -33,6 +34,7 @@
     "@cloudflare/workers-types": "^4.20260127.0",
     "@dotenvx/dotenvx": "^1.52.0",
     "@ethang/eslint-config": "^24.6.1",
+    "@portabletext/types": "^4.0.1",
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/router-plugin": "^1.157.16",
