--- a/apps/ethang-angular/package.json
+++ b/apps/ethang-angular/package.json
@@ -9,7 +9,9 @@
     "@angular/router": "^21.1.0",
     "@angular/ssr": "^21.1.1",
     "@sanity/client": "^7.14.1",
+    "lodash": "^4.17.23",
     "rxjs": "~7.8.0",
+    "tailwind-merge": "^3.4.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -18,10 +20,11 @@
     "@angular/compiler-cli": "^21.1.0",
     "@ethang/eslint-config": "^24.7.3",
     "@tailwindcss/postcss": "^4.1.12",
-    "@types/node": "^20.19.32",
+    "@types/lodash": "^4.17.23",
+    "@types/node": "^25.2.1",
     "browserslist-config-baseline": "^0.5.0",
     "eslint": "^9.39.2",
-    "jsdom": "^27.1.0",
+    "jsdom": "^28.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.12",
     "typescript": "~5.9.2",
