--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -11,15 +11,15 @@
     "@cspell/eslint-plugin": "^9.6.4",
     "@eslint-react/eslint-plugin": "^2.13.0",
     "@eslint/css": "0.14.1",
-    "@eslint/js": "^9.39.2",
+    "@eslint/js": "^10.0.1",
     "@eslint/json": "^1.0.1",
     "@eslint/markdown": "^7.5.1",
-    "@html-eslint/eslint-plugin": "^0.55.0",
+    "@html-eslint/eslint-plugin": "^0.56.0",
     "@tanstack/eslint-plugin-query": "^5.91.4",
-    "@tanstack/eslint-plugin-router": "^1.161.2",
+    "@tanstack/eslint-plugin-router": "^1.161.4",
     "@typescript-eslint/parser": "^8.56.0",
     "angular-eslint": "21.2.0",
-    "eslint": "^9.39.2",
+    "eslint": "^10.0.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-astro": "^1.6.0",
     "eslint-plugin-compat": "^6.2.0",
@@ -29,10 +29,10 @@
     "eslint-plugin-prettier": "^5.5.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-solid": "^0.14.5",
-    "eslint-plugin-sonarjs": "3.0.7",
+    "eslint-plugin-sonarjs": "4.0.0",
     "eslint-plugin-storybook": "^10.2.10",
-    "eslint-plugin-tailwindcss": "^4.0.0-beta.0",
-    "eslint-plugin-unicorn": "^62.0.0",
+    "eslint-plugin-tailwindcss": "^3.18.2",
+    "eslint-plugin-unicorn": "^63.0.0",
     "prettier": "^3.8.1",
     "typescript-eslint": "^8.56.0"
   },
